--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,9 +5,15 @@ $black: rgb(35, 37, 44);
 //fonts
 
 $font-family: sans-serif;
+$font-title: 48px;
+$bold-font: bold;
+
+//layout
+$horizontalCenter: 0 auto;
+$flexedItem: flex;
 
 //header
 .header{
-  color: #fff;
-  font-size: 48px;
+  color: whitesmoke;
+  font-size: $font-title;
 }
