--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -22,7 +22,9 @@
   width: 7%;
   font-weight: bold;
 }
-.searchBtn:hover{
+
+.searchBtn:hover, .searchBtn:focus{
   text-decoration:none;
   background:#eee;
+  border: none;
 }
