--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,7 +4,7 @@ $black: rgb(40, 44, 52);
 
 //fonts
 
-$font-family: sans-serif;
+$font-family: Arial, sans-serif;
 $font-title: 48px;
 $bold-font: bold;
 
