moviesMenu Style list and list items Add year
Reported-by: Dania Duany

--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -19,8 +19,9 @@
   margin-left: 0.5em;
   background-color: white;
   border: 1.5px solid black;
-  width: 7%;
+  width: 8%;
   font-weight: bold;
+  font-size: 9px;
 }
 
 .searchBtn:hover, .searchBtn:focus{
