--- a/src/components/MoviesMenu/Movies/Movies.module.scss
+++ b/src/components/MoviesMenu/Movies/Movies.module.scss
@@ -5,9 +5,8 @@
 
 .moviesList {
   list-style: none;
-  display: $flexedItem;
   flex-wrap: wrap;
-  justify-content: center;
+  @extend .flexedAndAligned;
 }
 
 .movieItem {
