--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -6,8 +6,7 @@
 
 .form {
   width: 100%;
-  display: flex;
-  justify-content: center;
+  @extend .flexedAndAligned;
 }
 
 .input {
@@ -18,14 +17,15 @@
 .searchBtn {
   margin-left: 0.5em;
   background-color: white;
-  border: 1.5px solid black;
-  width: 8%;
-  font-weight: bold;
-  font-size: 9px;
+  border: $searchBorder;
+  min-width: 8%;
+  font-weight: $bold-font;
+  font-size: $search-Btn;
 }
 
-.searchBtn:hover, .searchBtn:focus{
-  text-decoration:none;
-  background:#eee;
+.searchBtn:hover,
+.searchBtn:focus {
+  text-decoration: none;
+  background: #eee;
   border: none;
 }
