--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
 
 .headerStyles {
   background-color: $black;
-  font-weight: $bold-font;
+  font-weight: $boldFont;
 }
 .pageTitle {
   margin: $horizontalCenter;
