--- a/src/components/MoviesMenu/MoviesMenu.module.scss
+++ b/src/components/MoviesMenu/MoviesMenu.module.scss
@@ -6,8 +6,8 @@
 }
 
 .subtitle {
-  font-size:$sub-title;
-  font-weight: $bold-font;
+  font-size: $subtitle;
+  font-weight: $boldFont;
   margin: 30px;
 }
 
