--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -19,8 +19,8 @@
   background-color: white;
   border: $searchBorder;
   min-width: 8%;
-  font-weight: $bold-font;
-  font-size: $search-Btn;
+  font-weight: $boldFont;
+  font-size: $searchBtn;
 }
 
 .searchBtn:hover,
